--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,22 @@
   </head>
 
   <body>
-    <%= yield %>
+   <% if user_signed_in? %>
+    Logged in as <strong><%= current_user.email %></strong>.
+    <%= link_to 'Edit profile', edit_user_registration_path %> |
+    <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+   <% else %>
+    <%= link_to "Sign up", new_user_registration_path %> |
+    <%= link_to "Login", new_user_session_path %>
+   <% end %>
+
+   <% if notice %>
+    <p class="alert alert-success"><%= notice %></p>
+   <% end %>
+   <% if alert %>
+    <p class="alert alert-danger"><%= alert %></p>
+   <% end %>   
+   <%= yield %>
   </body>
 </html>
+ 
