--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -16,7 +16,7 @@
                  <a class="nav-link text-light" href="#"><i class="fa fa-circle fa-fw mr-1"></i>Friends</a>
               </li>
               <li class="nav-item pl-1">
-                     <a class="nav-link text-light" href="/groups"><i class="fa fa-circle fa-fw fa-rotate-180 mr-1"></i>My Donations</a>
+                     <a class="nav-link text-light" href="/groups"><i class="fa fa-circle fa-fw fa-rotate-180 mr-1"></i>About Us</a>
               </li>
               <li class="nav-item pl-1">
                 <% if user_signed_in? %>
