Same commit as last just added a line break

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <%-         #   This is the Dashboard       #          -%>
-
+<br>
 <html>
   <body >
     <div class="container-fluid">
@@ -28,7 +28,7 @@
             <br>
   				</div>
           </div>
-  			</div>x
+  			</div>
   		</div>
 
   	</div>
