fixed some background issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,10 @@
  *= require font-awesome
  */
 @import "bootstrap";
+
+div, h1, h2, h3{
+  color: white;
+  //font-size: 70px;
+  text-align: center;
+
+}
