--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <%-         #   This is the Dashboard       #          -%>
 <br>
-<html>
-  <body >
+<html >
+  <body class="Dashboard" >
     <div class="container-fluid">
   	<div class="row">
       <div class="box_wide">
