--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,14 @@
  */
 @import "bootstrap";
 
+
+$color1: #263648;
+$color2: #bdc6d1;
+$color3: #f7f7f8;
+$color4: #a9b8c2;
+$color5: #bfe5ff;
+
+
 div, h1, h2, h3{
   color: white;
   //font-size: 70px;
