--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<head>
+  <style media="screen">
+    .sape{
+      position: absolute;
+      top:0;
+      right:0;
+      z-index: -1;
+    }
+  </style>
+</head>
+
+  <div class="sape">
+    <h1>Home#index</h1>
+    <p class="container-fluid" >Find me in app/views/home/index.html.erb</p>
+  </div>
