--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,6 +1,8 @@
+<%= stylesheet_link_tag "header" %>
+
 <Navbar class="navbar navbar-expand-lg bg-dark">
     <div class="container">
-         <a class="navbar-brand text-white" href="/">The Goal Funder</a>
+         <a  id = "present" class="navbar-brand text-white" href="/">The Goal Funder</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nvbCollapse" aria-controls="nvbCollapse">
                   <span class="navbar-toggler-icon"></span>
              </button>
@@ -35,9 +37,40 @@
                 <% if alert %>
                  <p class="alert alert-danger"><%= alert %></p>
                 <% end %>
-
+             </li>
+             <li></li>
+             <li></li>
+             <li class="nav-item pl-3">
+               <button type="button" id="sidebarCollapse" class="btn btn-dark">
+                 <i class="fa fa-align-justify"></i>
+               </button>
              </li>
            </ul>
      </div>
 </div>
 </Navbar>
+
+
+<!-- Sidebar -->
+<div class="wrapper">
+
+
+<nav id="sidebar">
+  <div class="sidebar-header">
+        <h3>Bootstrap Sidebar</h3>
+  </div>
+      <ul class="list-unstyled components">
+
+              <li>
+                  <a href="#">About</a>
+              </li>
+
+              <li>
+                  <a href="#">Portfolio</a>
+              </li>
+              <li>
+                  <a href="#">Contact</a>
+              </li>
+        </ul>
+</nav>
+</div>
