--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag "header" %>
 
-<Navbar class="navbar navbar-expand-lg bg-dark">
+<Navbar class="navbar navbar-expand-lg ">
     <div class="container">
          <a  id = "present" class="navbar-brand text-white" href="/">The Goal Funder</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nvbCollapse" aria-controls="nvbCollapse">
