--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,50 @@
 
-<style media="screen">
-  .sape{
-    position: absolute;
-    top:80px;
-    right:42%;
 
-  }
-  body{
-    background-image: url('https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
-  }
-</style>
 <body>
-  <div class="sape">
-    <h2>Sign up</h2>
+  <div class="form">
+    <div class="card">
+      <div class="card-header">
+          <h2>Sign up</h2>
+      </div>
+      <div class="card-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="input-group form-group">
+          <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fa fa-user"></i></span>
+          </div>
+            <%= f.email_field :email, class:'form-control',placeholder:"e-mail", autofocus: true, autocomplete: "email" %>
+        </div>
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+                <span class="input-group-text"><%= fa_icon "lock" %></span>
+            </div>
+            <%= f.password_field :password,class:'form-control',placeholder:"password (6 characters minimum)", autocomplete: "new-password" %>
+          </div>
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+                <span class="input-group-text"><%= fa_icon "lock" %></span>
+            </div>
+            <%= f.password_field :password_confirmation, class:'form-control',placeholder:"password confirmation",autocomplete: "new-password" %>
+          </div>
+          <% if devise_mapping.rememberable? %>
+            <div class="field">
+              <%= f.check_box :remember_me %>
+              <%= f.label :remember_me %>
+            </div>
+          <% end %>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="actions">
+          <%= f.submit "Sign up", class: 'btn btn-primary'%>
+          </div>
+        <% end %>
 
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <%= render "devise/shared/links" %>
+
       </div>
 
-      <div class="field">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
-      </div>
+    </div>
+</div>
 
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div>
-
-      <div class="actions">
-        <%= f.submit "Sign up" %>
-      </div>
-    <% end %>
-
-    <%= render "devise/shared/links" %>
-
-
-
-  </div>
 
 </body>
