login views 1.0v (not final yet)

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -14,7 +14,7 @@
             <%= f.email_field :email, class:'form-control',placeholder:"e-mail", autofocus: true, autocomplete: "email" %>
         </div>
           <div class="actions">
-          <%= f.submit  "Send me reset password instructions", class: 'btn btn-primary'%>
+          <%= f.submit  "Send me reset password instructions", class: 'btn btn-outline-dark'%>
           </div>
         <% end %>
 
