--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,7 +35,7 @@
           <% end %>
 
           <div class="actions">
-          <%= f.submit "Sign up", class: 'btn btn-primary'%>
+          <%= f.submit "Sign up", class: 'btn btn-outline-dark'%>
           </div>
         <% end %>
 
