--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -87,7 +87,13 @@ a[data-toggle="collapse"] {
     position: relative;
 }
 
-
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
 
 @media (max-width: 768px) {
     #sidebar {
