--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <title>My Chart.js Chart</title>
 
   <%= javascript_pack_tag 'index', 'data-turbolinks-track': 'reload' %>
@@ -19,7 +18,7 @@
 </head>
 
 <body  class="Dashboard" >
-  <div class="content">
+<div class="content">
     <div class="container-fluid">
       <div class="row">
         <div class="box_wide">
@@ -128,7 +127,8 @@
     <script>
 
     </script>
-  </div>
 
 
-</body></html>
+</div>
+</body>
+  </html>
