--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,77 +3,99 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 @import 'application.scss';
+.container-fluid {
+    padding-right:0;
+    padding-left: 0;
+    margin-right: 5%;
+    margin-left: 5%;
+    width: 75%;
+    padding-left: 5%;
+ }
 
 
-body{
-  background-image: url('https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
 
-}
   .Dashboard{
 	height: 100%;
 	font-family: "Montserrat Alternates", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
-
-//background-image: url('https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+background-image: $background;
 background-color: black;
 
-badiv, h1, h2, h3{
-    color: white;
-  }background-position: center;
+  background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
+background-attachment: fixed;
+
+}
+
+
+.theDate{
+  text-align: center;
+  font-size: 60px;
+  margin-top: 0%;
+  margin-left: 0%;
+
+//  padding-bottom: 100%;
+//  border: solid black 5px;
 }
 
 
 
-
-
-//transluscent box dateTime and Group Name
+//transluscent box with dateTime and Group Name
 .box_wide{
 background-color: rgba(67, 67, 67, 0.5);
 //  opacity: 0.7;
-  width: 70%;
-  height: 200px;
+  //width: 1275px;
+  //height: 200px;
 //  position: absolute;
 //  transform: translate(-50%, -50%);
   border-radius: 30px / 30px;
-  margin: 5px auto;
+  //margin: 5px auto;
   border: 0.5px solid rgba(67, 67, 67, 0.5);
-  margin-top: 0.5%
-//  padding: 5px;
+  margin-top: 0.5%;
+//  padding-left: 5%;
+//  margin-left: 5%;
 }
 
 .box_square{
 //  background-color: #434343;
   //opacity: 0.7;
   background-color: rgba(67, 67, 67, 0.5);
-//  width: 300px;
-  height: 500px;
+  //width: 350px;
+//  height: 500px;
 //  transform: translate(-50%, -50%);
   border-radius: 30px / 30px;
-  margin: 5px auto;
+
+
   border: 0.5px solid rgba(67, 67, 67, 0.5);
+  margin: 10px auto;
+//  padding-left: 5%;
+//  margin-left: 17%;
   }
+
 
   .box_square2{
   background-color: rgba(67, 67, 67, 0.5);
   //  opacity: 0.7;
-  //  width: 675px;
-    height: 500px;
+//    width: 850px;
+  //  height: 500px;
   //  transform: translate(-50%, -50%);
     border-radius: 30px / 30px;
-    margin: 5px auto;
+  //  margin: 5px auto;
     border: 0.5px solid rgba(67, 67, 67, 0.5);
     /* Add the blur effect */
   //   filter: blur(1px);
   //   -webkit-filter: blur(1px);
+  margin: 10px auto;
+//  padding-left: 5%;
+//  margin-left: 10%;
 
   }
 
 
   .progress-ring {
-
+    border: 0.5px solid rgba(67, 67, 67, 0.5);
   }
 
   .progress-ring__circle {
@@ -82,3 +104,36 @@ background-color: rgba(67, 67, 67, 0.5);
     transform: rotate(-90deg);
     transform-origin: 50% 50%;
   }
+
+  //Chart.js
+  .chartjs{
+    display: block;
+    overflow: hidden;
+    border: 0px;
+    margin: 0px;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    height: 100px;
+    width: 2px;
+    pointer-events: none;
+    //z-index: -1;
+  }
+
+  .chart-dm{
+display: block;
+width: 950%;
+height: 570%;
+  }
+
+  .chart-container {
+      position: relative;
+      margin-left:  3% ;
+      margin-bottom: 15% ;
+      margin-right: 3%;
+      width: 775px;
+      height: 500px;
+      max-width:100%; /* Added these */
+max-height:100%; /* Added these */
+    };
