--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
-  <title>My Chart.js Chart</title>
+
 
   <%= javascript_pack_tag 'index', 'data-turbolinks-track': 'reload' %>
 
@@ -18,117 +18,84 @@
 </head>
 
 <body  class="Dashboard" >
-<div class="content">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="box_wide">
-          <div class="col-md-12">
-            <div class="row">
-              <div class="col-md-6">
-                <br>
-                <br>
-                <br>
-                <h1 style="text-align: center"> March 2020 </h1>
-                <br>
-                <br>
-                <br>
-              </div>
-              <div class="col-md-6">
-                <br>
-                <br>
-                <br>
-                <h1> < group name > </h1>
-                <br>
-                <br>
-                <br>
-              </div>
-            </div>
-          </div>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+      <!- first box begins here ->
+      <div class="box_wide">
+			<div class="row">
+
+				<div class="col-md-3">
+
+          <!- month and Year ->
+          <h3>
+          <br><br>
+          <h1 class="theDate" id=date style=""></h1>
+          <br><br><br>
+					</h3>
+
+
+				</div>
+				<div class="col-md-9">
+					<h3>
+					group name
+					</h3>
+				</div>
         </div>
-      </div>
+			</div>
+		</div>
+	</div>
 
-      <div class="row">
-        <div style="margin-left: 14%"class="col-md-3">
-          <div class="box_square">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="btn-group" role="group">
+  <!- Second Row ->
+	<div class="row">
 
-                  <h1> savings group </h1>
-                </div>
-              </div>
-            </div>
-            <h2>
-              amount
-            </h2>
-            <h2>
-              /saved
-            </h2>
-
-            <div class="row">
-              <div class="col-md-12">
-                <h1>
-                  <a class="btn" href="#">More Info »</a>
-                </h1>
-
-              </div>
-            </div>
-
-          </div>
-
-          <div class="row">
-            <div class="col-md-12">
-            </div>
-          </div>
-        </div>
-
-        <div  style="padding-right: 4%"class="col-md-6">
-          <div class="box_square2">
-            <h1> savings group </h1>
-            <p>
-              Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-            </p>
-            <p>
-              <a class="btn" href="#">View details »</a></div>
-            </p>
-        </div>
-
-      </div>
-
+    <! left side of Row ->
+    <div class="col-md-3">
+		<div class="box_square">
+			<h3 class="text-center">
+				Saving Team
+			</h3>
       <svg
-        class="progress-ring"
-        width="120"
-        height="120">
-        <circle
-          class="progress-ring__circle"
-          stroke="white"
-          stroke-width="4"
-          fill="transparent"
-          r="52"
-          cx="60"
-          cy="60"/>
-      </svg>
+                class="progress-ring"
+                width="400"
+                height="400"
+                margin-left= "200%">
 
-      <input
-        value="35"
-        type="number"
-        step="5"
-        min="0"
-        max="100"
-        style="color: black"
-      ></input>
+                <circle
+                  class="progress-ring__circle"
+                  stroke="white"
+                  stroke-width="4"
+                  fill="transparent"
+                  r="90"
+                  cx="120"
+                  cy="120"
+                  />
+              </svg>
 
-    <div class="container"><iframe class="chartjs-hidden-iframe" tabindex="-1" style="display: block; overflow: hidden; border: 0px; margin: 0px; top: 0px; left: 0px; bottom: 0px; right: 0px; height: 100%; width: 100%; position: absolute; pointer-events: none; z-index: -1;"></iframe>
-      <canvas id="myChart" width="1140" height="570" style="display: block; width: 1140px; height: 570px;"></canvas>
+              <input
+              value="35"
+              type="number"
+              step="5"
+              min="0"
+              max="100"
+              style="color: black"
+            ></input>
+			<button type="button" class="btn btn-success">
+				view more buttonn
+			</button>
+		</div>
     </div>
 
+    <!- right side of Row ->
+    <div class="col-md-9">
+		<div class="box_square2">
+      <div class="chart-container">
+                <chartjs class="chartjs-hidden-iframe" tabindex="-1" ></chartjs>
+                <canvas id="myChart"  width="1140" height="700" class="chart-dm"></canvas></div>
+		</div>
     </div>
-
-    <script>
-
-    </script>
-
-
+	</div>
 </div>
+
 </body>
   </html>
