--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,8 @@
 <%-         #   This is the Dashboard       #          -%>
 <html lang="en"><head>
   <meta charset="UTF-8">
-  <style media="screen">
-    .content{
-      position: absolute;
-      top:80px;
-    }
-  </style>
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
@@ -18,7 +14,8 @@
 </head>
 
 <body  class="Dashboard" >
-<div class="container-fluid">
+
+<div id ="content" class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
       <!- first box begins here ->
