--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,29 @@
 <h2>Change your password</h2>
+<div class="form">
+  <div class="card">
+    <div class="card-body">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <%= f.hidden_field :reset_password_token %>
+      <div class="input-group form-group">
+        <div class="input-group-prepend">
+            <span class="input-group-text"><%= fa_icon "lock" %></span>
+        </div>
+        <%= f.password_field :password,class:'form-control',placeholder:"new password (6 characters minimum)", autocomplete: "new-password" %>
+      </div>
+      <div class="input-group form-group">
+        <div class="input-group-prepend">
+            <span class="input-group-text"><%= fa_icon "lock" %></span>
+        </div>
+        <%= f.password_field :password_confirmation, class:'form-control',placeholder:"password confirmation",autocomplete: "new-password" %>
+      </div>
+        <div class="actions">
+        <%= f.submit  "Change my password", class: 'btn btn-outline-dark'%>
+        </div>
+      <% end %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+      <%= render "devise/shared/links" %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+    </div>
+
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
