adding about page + linked it to navbar and side bar

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -18,7 +18,10 @@
                  <a class="nav-link text-light" href="#"><i class="fa fa-circle fa-fw mr-1"></i>Friends</a>
               </li>
               <li class="nav-item pl-1">
-                     <a class="nav-link text-light" href="/groups"><i class="fa fa-circle fa-fw fa-rotate-180 mr-1"></i>About Us</a>
+                     <a class="nav-link text-light" href="/groups"><i class="fa fa-circle fa-fw fa-rotate-180 mr-1"></i>Groups</a>
+              </li>
+              <li class="nav-item pl-1">
+                     <a class="nav-link text-light" href="/about"><i class="fa fa-circle fa-fw fa-rotate-180 mr-1"></i>About Us</a>
               </li>
               <li class="nav-item pl-1">
                 <% if user_signed_in? %>
@@ -62,7 +65,7 @@
       <ul class="list-unstyled components">
 
               <li>
-                  <a href="#">About</a>
+                  <a href="/about">About</a>
               </li>
 
               <li>
