Added background images

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,18 +22,18 @@
       <div class="box_wide">
 			<div class="row">
 
-				<div class="col-md-3">
+				<div class="col-md-4">
 
           <!- month and Year ->
           <h3>
           <br><br>
-          <h1 class="theDate" id=date style=""></h1>
+          <h1 class="theDate" id=date></h1>
           <br><br><br>
 					</h3>
 
 
 				</div>
-				<div class="col-md-9">
+				<div class="col-md-8">
 					<h3>
 					group name
 					</h3>
@@ -47,52 +47,48 @@
 	<div class="row">
 
     <! left side of Row ->
-    <div class="col-md-3">
+    <div class="col-md-4">
 		<div class="box_square">
-			<h3 class="text-center">
-				Saving Team
-			</h3>
-      <svg
-                class="progress-ring"
-                width="400"
-                height="400"
-                margin-left= "200%">
+			<h1 class="text">
+			Money Saved <br>
+			</h1>
+      <svg class="progress-ring">
 
                 <circle
                   class="progress-ring__circle"
-                  stroke="white"
-                  stroke-width="4"
-                  fill="transparent"
-                  r="90"
-                  cx="120"
-                  cy="120"
-                  />
+                  r= "120">
               </svg>
 
-              <input
-              value="35"
-              type="number"
-              step="5"
-              min="0"
-              max="100"
-              style="color: black"
-            ></input>
-			<button type="button" class="btn btn-success">
-				view more buttonn
+              <BR>
+			<button type="button" class="btn btn-success" style="margin: 5%">
+				view more
 			</button>
+
 		</div>
     </div>
 
     <!- right side of Row ->
-    <div class="col-md-9">
-		<div class="box_square2">
+    <div class="col-md-8">
+
+
+ <div class="box_square2">
       <div class="chart-container">
                 <chartjs class="chartjs-hidden-iframe" tabindex="-1" ></chartjs>
                 <canvas id="myChart"  width="1140" height="700" class="chart-dm"></canvas></div>
-		</div>
+
+              </div>
+
     </div>
 	</div>
 </div>
 
 </body>
   </html>
+  <input
+  value="85"
+  type="number"
+  step="5"
+  min="0"
+  max="100"
+  style="color: black"
+></input
