--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -10,8 +10,17 @@
     margin-left: 5%;
     width: 75%;
     padding-left: 5%;
+    padding-bottom: 5%;
  }
-
+ #page-wrap {
+   background: url(images/bg-blurry.jpg) no-repeat fixed;
+   width: 500px; margin: 40px auto;
+   border: 0.5px solid rgba(67, 67, 67, 0.5);
+   top: 0;
+   left: 0;
+   //width: 100%;
+   height: 100%;
+ }
 //this css get the dashboard in place so it doesnt appear bellow the sidebar
  #content{
    position: absolute;
@@ -38,8 +47,8 @@ background-attachment: fixed;
 .theDate{
   text-align: center;
   font-size: 60px;
-  margin-top: 0%;
-  margin-left: 0%;
+  padding: 2%;
+
 
 //  padding-bottom: 100%;
 //  border: solid black 5px;
@@ -49,66 +58,61 @@ background-attachment: fixed;
 
 //transluscent box with dateTime and Group Name
 .box_wide{
-background-color: rgba(67, 67, 67, 0.5);
-//  opacity: 0.7;
-  //width: 1275px;
-  //height: 200px;
-//  position: absolute;
-//  transform: translate(-50%, -50%);
+  background: url('sky_blur');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   border-radius: 30px / 30px;
-  //margin: 5px auto;
-  border: 0.5px solid rgba(67, 67, 67, 0.5);
+  border: 2px solid rgba(67, 67, 67, 0.5);
   margin-top: 0.5%;
-//  padding-left: 5%;
-//  margin-left: 5%;
+
 }
 
 .box_square{
-//  background-color: #434343;
-  //opacity: 0.7;
-  background-color: rgba(67, 67, 67, 0.5);
-  //width: 350px;
-//  height: 500px;
-//  transform: translate(-50%, -50%);
+  background: url('sky_blur');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   border-radius: 30px / 30px;
-
-
-  border: 0.5px solid rgba(67, 67, 67, 0.5);
+  border: 2px solid rgba(67, 67, 67, 0.5);
   margin: 10px auto;
-//  padding-left: 5%;
-//  margin-left: 17%;
   }
 
 
   .box_square2{
-  background-color: rgba(67, 67, 67, 0.5);
-  //  opacity: 0.7;
-//    width: 850px;
-  //  height: 500px;
-  //  transform: translate(-50%, -50%);
+    background: url('sky_blur');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     border-radius: 30px / 30px;
-  //  margin: 5px auto;
-    border: 0.5px solid rgba(67, 67, 67, 0.5);
-    /* Add the blur effect */
-  //   filter: blur(1px);
-  //   -webkit-filter: blur(1px);
-  margin: 10px auto;
-//  padding-left: 5%;
-//  margin-left: 10%;
-
+    border: 2px solid rgba(67, 67, 67, 0.5);
+    margin: 10px auto;
   }
+
 
 
   .progress-ring {
     border: 0.5px solid rgba(67, 67, 67, 0.5);
+    height: 300px;;
   }
 
   .progress-ring__circle {
     transition: 0.35s stroke-dashoffset;
-    // axis compensation
+    align-self: center;
     transform: rotate(-90deg);
     transform-origin: 50% 50%;
+    stroke: white;
+    stroke-width: 8;
+    fill: transparent;
+    cx: 60;
+    cy: 60;
+    margin: 5%;
   }
+
+
 
   //Chart.js
   .chartjs{
@@ -123,22 +127,28 @@ background-color: rgba(67, 67, 67, 0.5);
     height: 100px;
     width: 2px;
     pointer-events: none;
-    //z-index: -1;
+    z-index: -1;
   }
 
   .chart-dm{
 display: block;
-width: 950%;
-height: 570%;
+// border: 0.5px solid rgba(67, 67, 67, 0.5);
+//width: 950%;
+//height: 570%;
   }
 
   .chart-container {
+    // border: 0.5px solid rgba(0, 0, 67, 0.5);
       position: relative;
-      margin-left:  3% ;
-      margin-bottom: 15% ;
-      margin-right: 3%;
-      width: 775px;
-      height: 500px;
-      max-width:100%; /* Added these */
-max-height:100%; /* Added these */
+      margin-left:  0% ;
+      margin-bottom: 0% ;
+      margin-right: 0%;
+      margin: 2%;
+    //  width: 775px;
+    //  height: 500px;
+
     };
+
+.text{
+  margin: 5px;
+}
