minor changes to login positioning and navbar image

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<%-         #   This is the Dashboard       #          -%>
+<%-         #   This is the Dashboard     ALMOST FINISHED JUST NEED TO ADD RUBY FUNCTIONS  #          -%>
 <html lang="en"><head>
   <meta charset="UTF-8">
 
@@ -124,7 +124,7 @@
 
 </body>
   </html>
-
+<!-  temp holder for progress ring value - use this to adjust the progress ring.  in future the ring should adjust basaed of % of the Goals sum completed. ->        
   <input
   value="70"
   type="number"
