--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -7,7 +7,7 @@ body {
   //  background-color: rgba(67, 67, 67, 0.5);
 }
 navbar {
-  background-color: rgba(67, 67, 67, 0.5);
+  background: url(sky);
 }
 p {
     font-family: 'Poppins', sans-serif;
