--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,6 +13,11 @@
     padding-bottom: 5%;
  }
 
+ div{
+   color: white;
+   text-align: center;
+ }
+ 
 //this css get the dashboard in place so it doesnt appear bellow the sidebar
  #content{
    position: absolute;
