added bootrap columns and rows for goals page

--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,3 +1,202 @@
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<ul class="nav">
+				<li class="nav-item">
+					<a class="nav-link active" href="#">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Profile</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link disabled" href="#">Messages</a>
+				</li>
+				<li class="nav-item dropdown ml-md-auto">
+					 <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
+					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+						 <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
+						<div class="dropdown-divider">
+						</div> <a class="dropdown-item" href="#">Separated link</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-6">
+					<h3>
+						h3. Lorem ipsum dolor sit amet.
+					</h3>
+					<p>
+						Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+					</p>
+				</div>
+				<div class="col-md-6">
+
+					<button type="button" class="btn btn-success">
+						Button
+					</button>
+					<button type="button" class="btn btn-success">
+						Button
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-4">
+					<h3>
+						h3. Lorem ipsum dolor sit amet.
+					</h3>
+					<ol>
+						<li class="list-item">
+							Lorem ipsum dolor sit amet
+						</li>
+						<li class="list-item">
+							Consectetur adipiscing elit
+						</li>
+						<li class="list-item">
+							Integer molestie lorem at massa
+						</li>
+						<li class="list-item">
+							Facilisis in pretium nisl aliquet
+						</li>
+						<li class="list-item">
+							Nulla volutpat aliquam velit
+						</li>
+						<li class="list-item">
+							Faucibus porta lacus fringilla vel
+						</li>
+						<li class="list-item">
+							Aenean sit amet erat nunc
+						</li>
+						<li class="list-item">
+							Eget porttitor lorem
+						</li>
+					</ol>
+				</div>
+				<div class="col-md-4">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="progress">
+								<div class="progress-bar w-75 progress-bar-animated progress-bar-striped">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<h3>
+								h3. Lorem ipsum dolor sit amet.
+							</h3>
+							<ol>
+								<li class="list-item">
+									Lorem ipsum dolor sit amet
+								</li>
+								<li class="list-item">
+									Consectetur adipiscing elit
+								</li>
+								<li class="list-item">
+									Integer molestie lorem at massa
+								</li>
+								<li class="list-item">
+									Facilisis in pretium nisl aliquet
+								</li>
+								<li class="list-item">
+									Nulla volutpat aliquam velit
+								</li>
+								<li class="list-item">
+									Faucibus porta lacus fringilla vel
+								</li>
+								<li class="list-item">
+									Aenean sit amet erat nunc
+								</li>
+								<li class="list-item">
+									Eget porttitor lorem
+								</li>
+							</ol>
+							<div class="row">
+								<div class="col-md-6">
+
+									<button type="button" class="btn btn-success">
+										Button
+									</button>
+								</div>
+								<div class="col-md-6">
+
+									<button type="button" class="btn btn-success">
+										Button
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="row">
+						<div class="col-md-12">
+
+							<button type="button" class="btn btn-success">
+								Button
+							</button>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+
+							<button type="button" class="btn btn-success">
+								Button
+							</button>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+
+							<button type="button" class="btn btn-success">
+								Button
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <p id="notice"><%= notice %></p>
 
 <h1>Goals</h1>
