add some extra headers/footers

--- a/app/assets/stylesheets/goals.scss
+++ b/app/assets/stylesheets/goals.scss
@@ -1,3 +1,75 @@
 // Place all the styles related to the Goals controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+@import 'application.scss';
+
+.nav{
+
+  margin-left: 17%;
+}
+.pageNavBar{
+  background-color: $color1;
+  float: left;
+   border: 1px solid #121314;
+   border-top: 1px solid #2b2e30;
+   -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   border-radius: 0px;
+   overflow: hidden;
+   width:100%;
+   min-width: 650px;
+}
+
+.pageDescription{
+  background-color: $color2;
+  float: left;
+   border: 1px solid #121314;
+   border-top: 1px solid #2b2e30;
+   -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   border-radius: 0px;
+   overflow: hidden;
+   width:100%;
+   min-width: 650px;
+
+}
+
+
+.float-box-left{
+  background: url('sky_blur');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  border-radius: 5px / 5px;
+  border: 2px solid rgba(67, 67, 67, 0.5);
+  margin: 10px auto;
+}
+
+.float-box-mid{
+  background: url('sky_blur');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  border-radius: 5px / 5px;
+  border: 2px solid rgba(67, 67, 67, 0.5);
+  margin: 10px auto;
+}
+
+
+.float-box-right{
+  background: url('sky_blur');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  border-radius: 5px / 5px;
+  border: 2px solid rgba(67, 67, 67, 0.5);
+  margin: 10px auto;
+}
+
+.col {
+  display: table-cell;
+  padding: 16px;
+}
