--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -124,7 +124,7 @@
 
 </body>
   </html>
-<!-  temp holder for progress ring value - use this to adjust the progress ring.  in future the ring should adjust basaed of % of the Goals sum completed. ->        
+<!-  temp value for progress ring value - use this to adjust the progress ring.  in future the ring should adjust basaed of % of the Goals sum completed. ->
   <input
   value="70"
   type="number"
@@ -133,3 +133,8 @@
   max="100"
   style="color: black"
 ></input
+
+<% if @home_banner %>
+ <h1> FUCKING NERD </h1>
+
+ <% end %>
