--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,7 +17,7 @@
    color: white;
    text-align: center;
  }
- 
+
 //this css get the dashboard in place so it doesnt appear bellow the sidebar
  #content{
    position: absolute;
@@ -217,4 +217,12 @@ margin-top: 5%;
   background-image: url('sky');
  background-repeat: no-repeat;
  background-size: cover;
+}
+
+
+
+div{
+  color: white;
+  text-align: center;
+  //border: solid blue;
 }
