--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -16,7 +16,7 @@
  #content{
    position: absolute;
    top:80px;
-   left:10%;
+   left:10px;
  }
  ///-----------------------------------------------------------------------
   .Dashboard{
