--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,9 +6,11 @@
     <div class="card-body">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
+
+
       <div class="input-group form-group">
         <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fa fa-user"></i></span>
+            <span class="input-group-text"><i class="fa fa-at"></i></span>
         </div>
           <%= f.email_field :email, class:'form-control',placeholder:"e-mail", autofocus: true, autocomplete: "email" %>
       </div>
