--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,13 +18,13 @@
 <div id ="content" class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-      <!- first box begins here ->
+      <!-- first box begins here -->
       <div class="box_wide">
 			<div class="row">
 
 				<div class="col-md-3">
 
-          <!- month and Year ->
+          <!-- month and Year -->
           <h3>
           <br><br>
           <h1 class="theDate" id=date style=""></h1>
@@ -43,10 +43,10 @@
 		</div>
 	</div>
 
-  <!- Second Row ->
+  <!-- Second Row -->
 	<div class="row">
 
-    <! left side of Row ->
+    <!-- left side of Row -->
     <div class="col-md-3">
 		<div class="box_square">
 			<h3 class="text-center">
@@ -83,7 +83,7 @@
 		</div>
     </div>
 
-    <!- right side of Row ->
+    <!--- right side of Row --->
     <div class="col-md-9">
 		<div class="box_square2">
       <div class="chart-container">
